--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,6 +13,7 @@ assignees:
 status-website:
   cname: status.concord.chat
   logoUrl: https://raw.githubusercontent.com/concordchat/branding/main/mascot.svg
+  faviconSvg: https://raw.githubusercontent.com/concordchat/branding/main/mascot.svg
   theme: night
   name: Concord
   introTitle: "Ultra-fast, Scalable, Open-Source Chat Platform."
