--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,7 +30,7 @@ status-website:
   theme: night
   name: Concord
   introTitle: "Ultra-fast, Scalable, Open-Source Chat Platform."
-  introMessage: This is the status page for Concords Services.
+  introMessage: This is the status page for Concord.chat.
   navbar:
     - title: Home
       href: /
